--- a/style.css
+++ b/style.css
@@ -10,20 +10,69 @@
   padding: 0;
 }
 
-.header {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    padding: 10px;
-    background-color: black;
-    color: white;
-  }
+body {
+  min-height: 100vh;
+  background-color: #fff;
+  color: black;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
 
-  .footer {
-    display: flex;
-    justify-content: space-around;
-    gap: 10px;
-    padding: 10px;
-    background-color: black;
-    color: white;
-  }
+.header {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 10px;
+  background-color: black;
+  color: white;
+}
+
+.main {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: space-evenly;
+}
+
+.button {
+  padding: 8px;
+  color: black;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: opacity 0.3s;
+  margin: 2px;
+}
+
+.button:hover {
+  opacity: 0.7;
+  background-color: lightblue;
+}
+
+input,
+select {
+  display: flex;
+  padding: 8px;
+  background-color: lightblue;
+  color: black;
+  border-radius: 8px;
+  margin: 5px;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+}
+
+.section {
+  margin-top: 20px;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-around;
+  gap: 10px;
+  padding: 10px;
+  background-color: black;
+  color: white;
+}
